<resources>
    <string name="app_name">Practica</string>
    <string name="groups">Bands</string>
    <string name="see_concerts">See concerts</string>
    <string name="add_concert">Add concert</string>
    <string name="date">Date</string>
    <string name="hour">Time</string>
    <string name="place">Place</string>
    <string name="assisted">Attended</string>
    <string name="canceled">Canceled</string>
    <string name="save">Save</string>
    <string name="price">Price</string>
    <string name="modify">Modify</string>
    <string name="delete">Delete</string>
    <string name="added_concert">Concert added</string>
    <string name="modified_concert">Concert modified</string>
    <string name="about_title">BandsDB</string>
    <string name="about_description">
        With this app you can store concerts, personalize and visualize them,
        specifying bands, date and time, select a placement on a map, price,
        mark as assisted or as canceled.
        Also, you can visualize all the concerts on a map
    </string>
    <string name="about_it">About it</string>
    <string name="view_concert_status">See concerts status</string>
    <string name="bands_missing">Bands are required</string>
    <string name="date_missing">No date</string>
    <string name="time_missing">No time</string>
    <string name="place_missing">No place</string>
    <string name="price_missing">0.0</string>
    <string name="poster_missing">Poster is required</string>
    <string name="pending_concerts">Pending concerts</string>
    <string name="status_counters">Concert counters</string>
    <string name="counter_pending">Pending</string>
    <string name="count_attended">Attended</string>
    <string name="count_canceled">Canceled</string>
    <string name="wrong_decimal_format">Decimal must be 0.0 or 0,0</string>
    <string name="location">Location</string>
    <string name="date_required">Date is required</string>
    <string name="place_required">Place required</string>
    <string name="see_concerts_map">See concerts map</string>
    <string name="preferences">Preferences</string>
    <string name="title_activity_preferencias">Settings</string>

    <!-- Strings related to Settings -->

    <!-- Example General settings -->
    <string name="pref_header_general">General</string>

    <string name="pref_title_social_recommendations">Enable social recommendations</string>
    <string name="pref_description_social_recommendations">Recommendations for people to contact
        based on your message history
    </string>

    <string name="pref_title_display_name">Display name</string>
    <string name="pref_default_display_name">John Smith</string>

    <string name="pref_title_add_friends_to_messages">Add friends to messages</string>
    <string-array name="pref_example_list_titles">
        <item>Always</item>
        <item>When possible</item>
        <item>Never</item>
    </string-array>
    <string-array name="pref_example_list_values">
        <item>1</item>
        <item>0</item>
        <item>-1</item>
    </string-array>

    <!-- Example settings for Data & Sync -->
    <string name="pref_header_data_sync">Data &amp; sync</string>

    <string name="pref_title_sync_frequency">Sync frequency</string>
    <string-array name="pref_sync_frequency_titles">
        <item>15 minutes</item>
        <item>30 minutes</item>
        <item>1 hour</item>
        <item>3 hours</item>
        <item>6 hours</item>
        <item>Never</item>
    </string-array>
    <string-array name="pref_sync_frequency_values">
        <item>15</item>
        <item>30</item>
        <item>60</item>
        <item>180</item>
        <item>360</item>
        <item>-1</item>
    </string-array>

    <string-array name="list_preference_entries">
        <item>Entry 1</item>
        <item>Entry 2</item>
        <item>Entry 3</item>
    </string-array>

    <string-array name="list_preference_entry_values">
        <item>1</item>
        <item>2</item>
        <item>3</item>
    </string-array>

    <string-array name="multi_select_list_preference_default_value" />

    <string name="pref_title_system_sync_settings">System sync settings</string>

    <!-- Example settings for Notifications -->
    <string name="pref_header_notifications">Notifications</string>

    <string name="pref_title_new_message_notifications">New message notifications</string>

    <string name="pref_title_ringtone">Ringtone</string>
    <string name="pref_ringtone_silent">Silent</string>

    <string name="pref_title_vibrate">Vibrate</string>
</resources>
