<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".activities.MainActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginStart="8dp"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="8dp"
        android:layout_marginBottom="8dp"
        android:orientation="vertical"
        android:paddingLeft="50dp"
        android:paddingTop="170dp"
        android:paddingRight="50dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <Button
            android:id="@+id/btConciertosEstado"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/view_concert_status" />

        <Button
            android:id="@+id/btVer"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/see_concerts" />

        <Button
            android:id="@+id/btAnadir"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/add_concert" />
    </LinearLayout>
</android.support.constraint.ConstraintLayout>